manifest.yaml
---
# Source: vault/charts/base/templates/service.tpl
apiVersion: v1
kind: Service
metadata:
  name: release-name-base
  labels: 
    app.kubernetes.io/name: base
    app.kubernetes.io/instance: release-name
    helm.sh/chart: base-0.0.1
    app.kubernetes.io/managed-by: Helm
spec: 
  ports:
  - name: http
    port: 8200
---
# Source: vault/charts/base/templates/deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-base
  labels: 
    app.kubernetes.io/name: base
    app.kubernetes.io/instance: release-name
    helm.sh/chart: base-0.0.1
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/name: base
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: base
        app.kubernetes.io/instance: release-name
        helm.sh/chart: base-0.0.1
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-base
      containers:
        - name: base
          image: "hashicorp/vault:1.20.2"
          volumeMounts:
            - mountPath: /vault/config.d/config.json
              name: secret-files
              readOnly: true
              subPath: ___vault___config.d___config.json
            - mountPath: /vault/file
              name: persistent-volume-claim-file
      volumes:
        - name: secret-files
          secret:
            secretName: release-name-base-files
        - name: persistent-volume-claim-file
          persistentVolumeClaim:
            claimName: release-name-base-file
---
# Source: vault/charts/base/templates/ingress.tpl
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: release-name-base
  labels: 
    app.kubernetes.io/name: base
    app.kubernetes.io/instance: release-name
    helm.sh/chart: base-0.0.1
    app.kubernetes.io/managed-by: Helm
spec: 
  rules:
  - host: vault.example.local
    http:
      paths:
      - backend:
          service:
            name: release-name-base
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vault.example.local
    secretName: vault-tls-secret
